# authress-local

./: Cargo.toml  Dockerfile  README.md  build-release.sh  contributing.md
.github/workflows/: build.yml
api/: openapi.yaml
examples/server/: authentication.rs  authentication_controller.rs  databases.rs  main.rs  server.rs
src/: lib.rs  models.rs.bak
src/authentication/: mod.rs
src/server/: mod.rs
