# Schema Allowed Properties in the Cargo.toml manifest: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "authress_local"

# Use the published binary or container instead
publish = false
version = "0.0.0"
edition = "2021"
description = "Authress Local - Authorization running directly on your local machine. Used to provide an Authress compatible API for local development."
authors = ["Authress Developers <developers@authress.io>"]

documentation = "https://authress.io/app/#/api"
homepage = "https://authress.io"
repository = "https://github.com/Authress/authress-local"
license = "Apache-2.0"
keywords = ["authentication", "authorization", "roles", "permission-policy", "oauth-openid-saml"]
categories = ["authentication", "api-bindings", "config", "database", "development-tools"]

[features]
default = ["server"]
server = ["serde_ignored", "hyper", "regex", "percent-encoding", "url", "lazy_static"]
conversion = ["frunk", "frunk_derives", "frunk_core", "frunk-enum-core", "frunk-enum-derive"]

[dependencies]
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "6.1", features = ["serdejson", "server", "tls", "tcp"] }
log = "0.4.0"
mime = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Common between server and client features
hyper = {version = "0.14", features = ["full"], optional = true}
serde_ignored = {version = "0.1.1", optional = true}
url = {version = "2.1", optional = true}

# Server, and client callback-specific
lazy_static = { version = "1.4", optional = true }
percent-encoding = {version = "2.1.0", optional = true}
regex = {version = "1.3", optional = true}

# Conversion
frunk = { version = "0.3.0", optional = true }
frunk_derives = { version = "0.3.0", optional = true }
frunk_core = { version = "0.3.0", optional = true }
frunk-enum-derive = { version = "0.2.0", optional = true }
frunk-enum-core = { version = "0.2.0", optional = true }
authress = "0.1.41"
dashmap = { version = "5.5.0", features = [] }
nanoid = "0.4.0"

[dev-dependencies]
clap = "2.25"
simple_logger = "4.2.0"
tokio = { version = "1.14", features = ["full"] }
native-tls = "0.2"

[target.'cfg(not(any(target_os = "macos", target_os = "windows", target_os = "ios")))'.dev-dependencies]
tokio-openssl = "0.6"
openssl = "0.10"

[[example]]
name = "server"
required-features = ["server"]
